OnboardingV2Minimal/force-app/main/default/objects/Order__c/Order__c.object-meta.xml
<CustomObject>
    <label>PV-Order</label>
    <nameField>
        <displayFormat>PV-{00000000}</displayFormat>
        <label>Sales Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PV-Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>