OnboardingV2Minimal/force-app/main/default/objects/Order__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.P10_Invoice_Account__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PV-Orders</relationshipLabel>
    <relationshipName>Orders1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>