OnboardingV2Minimal/force-app/main/default/objects/Order__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>Delivery City</label>
    <length>25</length>
    <type>Text</type>
</CustomField>