OnboardingV2Minimal/force-app/main/default/objects/Order__c/fields/Company_Address__c.field-meta.xml
<CustomField>
    <fullName>Company_Address__c</fullName>
    <formula>Account_Name__r.BillingStreet +&quot;, &quot;+
Account_Name__r.BillingCity +&quot;, &quot;+
Account_Name__r.BillingState +&quot;, &quot;+
Account_Name__r.BillingPostalCode+&quot;, &quot;+
Account_Name__r.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Address</label>
    <type>Text</type>
</CustomField>