OnboardingV2Minimal/force-app/main/default/objects/Order__c/fields/Company_City__c.field-meta.xml
<CustomField>
    <fullName>Company_City__c</fullName>
    <formula>Account_Name__r.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company City</label>
    <type>Text</type>
</CustomField>