OnboardingV2Minimal/force-app/main/default/objects/Order__c/fields/Company_State__c.field-meta.xml
<CustomField>
    <fullName>Company_State__c</fullName>
    <formula>Account_Name__r.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company State</label>
    <type>Text</type>
</CustomField>