OnboardingV2Minimal/force-app/main/default/objects/Order__c/fields/Company_Street__c.field-meta.xml
<CustomField>
    <fullName>Company_Street__c</fullName>
    <formula>Account_Name__r.BillingStreet</formula>
    <label>Company Street</label>
    <type>Text</type>
</CustomField>