OnboardingV2Minimal/force-app/main/default/objects/Order__c/fields/Company_Zip__c.field-meta.xml
<CustomField>
    <fullName>Company_Zip__c</fullName>
    <formula>Account_Name__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Zip</label>
    <type>Text</type>
</CustomField>