OnboardingV2Minimal/force-app/main/default/objects/Order__c/fields/Confirmed_ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_ship_Date__c</fullName>
    <label>Confirmed ship Date</label>
    <type>Date</type>
</CustomField>