OnboardingV2Minimal/force-app/main/default/objects/Order__c/fields/Customer_PO__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO__c</fullName>
    <label>Customer PO</label>
    <length>30</length>
    <type>Text</type>
</CustomField>