OnboardingV2Minimal/force-app/main/default/objects/Order__c/fields/Default_Method_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Default_Method_of_Payment__c</fullName>
    <formula>TEXT(Account_Name__r.Payment_Terms__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Method of Payment</label>
    <type>Text</type>
</CustomField>