OnboardingV2Minimal/force-app/main/default/objects/Order__c/fields/Delivery_Address__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Address__c</fullName>
    <label>Delivery Address</label>
    <length>80</length>
    <type>Text</type>
</CustomField>