OnboardingV2Minimal/force-app/main/default/objects/Order__c/fields/Delivery_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Contact_Name__c</fullName>
    <label>Delivery Contact Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>