OnboardingV2Minimal/force-app/main/default/objects/Order__c/fields/Delivery_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Contact_Number__c</fullName>
    <label>Delivery Contact Number</label>
    <type>Phone</type>
</CustomField>