OnboardingV2Minimal/force-app/main/default/objects/Order__c/fields/Direct_TV_Dealer_ID__c.field-meta.xml
<CustomField>
    <fullName>Direct_TV_Dealer_ID__c</fullName>
    <label>Direct TV Dealer ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>