OnboardingV2Minimal/force-app/main/default/objects/Order__c/fields/Freight_Quote__c.field-meta.xml
<CustomField>
    <fullName>Freight_Quote__c</fullName>
    <label>Freight Quote</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>