OnboardingV2Minimal/force-app/main/default/objects/Order__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <label>Invoice</label>
    <length>25</length>
    <type>Text</type>
</CustomField>