OnboardingV2Minimal/force-app/main/default/objects/Order__c/fields/is_Fulfilled__c.field-meta.xml
<CustomField>
    <fullName>is_Fulfilled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Fulfilled</label>
    <type>Checkbox</type>
</CustomField>