OnboardingV2Minimal/force-app/main/default/objects/Order__c/fields/Mode_of_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Delivery__c</fullName>
    <label>Mode of Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ground</fullName>
                <default>true</default>
                <label>Ground</label>
            </value>
            <value>
                <fullName>Overnight</fullName>
            </value>
            <value>
                <fullName>LTL</fullName>
            </value>
            <value>
                <fullName>TQL</fullName>
            </value>
            <value>
                <fullName>CPU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>