OnboardingV2Minimal/force-app/main/default/objects/Order__c/fields/MSP_Not_Meet__c.field-meta.xml
<CustomField>
    <fullName>MSP_Not_Meet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MSP Not Meet</label>
    <type>Checkbox</type>
</CustomField>