OnboardingV2Minimal/force-app/main/default/objects/Order__c/fields/MSP_Price_Warning_order__c.field-meta.xml
<CustomField>
    <fullName>MSP_Price_Warning_order__c</fullName>
    <formula>IF(
    Total_Number_of_Parts__c = 0,
    &quot;No parts available&quot;, 
    IF(
        AND(
            MSP_Not_Meet__c, 
            Total_Number_of_Parts__c &gt; 0
        ),
        IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;red&quot;, 20, 20) + &quot; One or more parts is below MSP&quot;, 
        IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;yellow&quot;, 20, 20) + &quot; No parts are below MSP&quot;
    )
)</formula>
    <label>MSP Price Warning</label>
    <type>Text</type>
</CustomField>