OnboardingV2Minimal/force-app/main/default/objects/Order__c/fields/Net_Fulfilled_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Net_Fulfilled_Total_Amount__c</fullName>
    <formula>Fullfilled_Total_Amount__c  +  Sales_Tax__c  +  Freight__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Fulfilled Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>