OnboardingV2Minimal/force-app/main/default/objects/Order__c/fields/Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Name__c</fullName>
    <label>Program Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACC</fullName>
            </value>
            <value>
                <fullName>DTV-RES</fullName>
            </value>
            <value>
                <fullName>DTV-MSO</fullName>
            </value>
            <value>
                <fullName>DTV-COM</fullName>
            </value>
            <value>
                <fullName>DTV-MSOC</fullName>
            </value>
            <value>
                <fullName>DTV-SMATV</fullName>
            </value>
            <value>
                <fullName>DTV-MSOS</fullName>
            </value>
            <value>
                <fullName>DTV-MDU</fullName>
            </value>
            <value>
                <fullName>DTV-MSAR</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>