OnboardingV2Minimal/force-app/main/default/objects/Order__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <label>Delivery Street</label>
    <length>25</length>
    <type>Text</type>
</CustomField>