OnboardingV2Minimal/force-app/main/default/objects/Order__c/fields/TMO_Market__c.field-meta.xml
<CustomField>
    <fullName>TMO_Market__c</fullName>
    <label>TMO Market</label>
    <length>30</length>
    <type>Text</type>
</CustomField>