OnboardingV2Minimal/force-app/main/default/objects/Order__c/fields/Total_Number_of_Parts__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Parts__c</fullName>
    <label>Total Number of Parts</label>
    <summaryForeignKey>Line_Item__c.Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>