OnboardingV2Minimal/force-app/main/default/objects/Order__c/fields/Tracking__c.field-meta.xml
<CustomField>
    <fullName>Tracking__c</fullName>
    <label>Tracking</label>
    <length>80</length>
    <type>Text</type>
</CustomField>