OnboardingV2Minimal/force-app/main/default/objects/Order__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <label>Warehouse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>CHI</fullName>
            </value>
            <value>
                <fullName>NLR</fullName>
            </value>
            <value>
                <fullName>NLR4</fullName>
            </value>
            <value>
                <fullName>DAL</fullName>
            </value>
            <value>
                <fullName>PA</fullName>
            </value>
            <value>
                <fullName>XYZ wh A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>