OnboardingV2Minimal/force-app/main/default/objects/Order__c/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <label>Delivery Zip</label>
    <length>8</length>
    <type>Text</type>
</CustomField>