OnboardingV2Minimal/force-app/main/default/objects/Order__c/validationRules/Direct_TV_DealerId_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Direct_TV_DealerId_Validation</fullName>
    <active>true</active>
    <description>Maximum Length of the field should be 15</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Direct_TV_Dealer_ID__c)),LEN(TEXT(Direct_TV_Dealer_ID__c))&gt;15)</errorConditionFormula>
    <errorMessage>Field length cannot be more than 15 digits</errorMessage>
</ValidationRule>