OnboardingV2Minimal/force-app/main/default/objects/Order__c/validationRules/From_Fulfilled_stage_block_cancelling.validationRule-meta.xml
<ValidationRule>
    <fullName>From_Fulfilled_stage_block_cancelling</fullName>
    <active>true</active>
    <errorConditionFormula>AND(is_Fulfilled__c = TRUE , ISPICKVAL( Stage__c , &quot;Cancelled&quot;) )</errorConditionFormula>
    <errorMessage>Cannot cancel the fulfilled order</errorMessage>
</ValidationRule>