OnboardingV2Minimal/force-app/main/default/objects/Order__c/validationRules/Invoice_field_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Invoice_field_validation</fullName>
    <active>true</active>
    <errorConditionFormula>IF( AND( ISBLANK(Invoice__c),  ISPICKVAL(Stage__c,&apos;Invoiced&apos;)) ,TRUE,FALSE)</errorConditionFormula>
    <errorMessage>Stage can only be changed when invoice field is filled</errorMessage>
</ValidationRule>