OnboardingV2Minimal/force-app/main/default/objects/Order__c/validationRules/No_Stage_change_after_Cancelled.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Stage_change_after_Cancelled</fullName>
    <active>true</active>
    <description>Cannot change the stages of a cancelled order</description>
    <errorConditionFormula>AND(ISCHANGED( Stage__c ), ISPICKVAL(PRIORVALUE( Stage__c ), &quot;Cancelled&quot;) )</errorConditionFormula>
    <errorMessage>Not possible to change the stage of Cancelled Order</errorMessage>
</ValidationRule>