OnboardingV2Minimal/force-app/main/default/objects/Order__c/validationRules/PreviousStage_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>PreviousStage_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
ISPICKVAL(Stage__c , &apos;MSP Approval&apos;),
ISPICKVAL(Stage__c , &apos;In Process&apos;),
ISPICKVAL(Stage__c , &apos;MSP Approval&apos;),
ISPICKVAL(Stage__c , &apos;Credit Approval&apos;),
ISPICKVAL(Stage__c , &apos;New&apos;),
ISPICKVAL(Stage__c , &apos;Ready For Picking&apos;),
ISPICKVAL(Stage__c , &apos;Warehouse Hold&apos;)
),
ISCHANGED(Stage__c),
OR(
ISPICKVAL(PRIORVALUE( Stage__c),&apos;Fulfilled&apos; ),
ISPICKVAL(PRIORVALUE( Stage__c),&apos;Invoiced&apos; ),
ISPICKVAL(PRIORVALUE( Stage__c),&apos;Accounting&apos;)
)
)</errorConditionFormula>
    <errorMessage>Fulfilled orders can only be moved to Accounting Stages or Cancelled.</errorMessage>
</ValidationRule>