OnboardingV2Minimal/force-app/main/default/objects/Order__c/listViews/Accounting_Accounting.listView-meta.xml
<ListView>
    <fullName>Accounting_Accounting</fullName>
    <columns>NAME</columns>
    <columns>Customer_ID__c</columns>
    <columns>Stage__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Carrier__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Accounting</value>
    </filters>
    <label>Accounting- Accounting</label>
    <sharedTo>
        <group>Accounting_Team</group>
    </sharedTo>
</ListView>