OnboardingV2Minimal/force-app/main/default/objects/Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer_ID__c</columns>
    <columns>Stage__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Carrier__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>