OnboardingV2Minimal/force-app/main/default/objects/Order__c/listViews/MSP_Approval.listView-meta.xml
<ListView>
    <fullName>MSP_Approval</fullName>
    <columns>NAME</columns>
    <columns>Customer_ID__c</columns>
    <columns>Stage__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Carrier__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>MSP Approval</value>
    </filters>
    <label>MSP - MSP Approval</label>
    <sharedTo>
        <group>MSP_Team</group>
    </sharedTo>
</ListView>