OnboardingV2Minimal/force-app/main/default/objects/Order__c/listViews/Sales_My_Order.listView-meta.xml
<ListView>
    <fullName>Sales_My_Order</fullName>
    <columns>NAME</columns>
    <columns>Customer_ID__c</columns>
    <columns>Stage__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Carrier__c</columns>
    <filterScope>Mine</filterScope>
    <label>Sales - My Orders</label>
    <sharedTo>
        <group>Sales_Team</group>
    </sharedTo>
</ListView>