OnboardingV2Minimal/force-app/main/default/objects/Order__c/listViews/Sales_New.listView-meta.xml
<ListView>
    <fullName>Sales_New</fullName>
    <columns>NAME</columns>
    <columns>Customer_ID__c</columns>
    <columns>Stage__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Carrier__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>Sales - New</label>
    <sharedTo>
        <group>Sales_Team</group>
    </sharedTo>
</ListView>