OnboardingV2Minimal/force-app/main/default/objects/Order__c/listViews/Warehouse_Fullfilled.listView-meta.xml
<ListView>
    <fullName>Warehouse_Fullfilled</fullName>
    <columns>NAME</columns>
    <columns>Customer_ID__c</columns>
    <columns>Stage__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Carrier__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Fulfilled</value>
    </filters>
    <label>Warehouse - Fullfilled</label>
    <sharedTo>
        <group>Warehouse_Team</group>
    </sharedTo>
</ListView>